fix readme about "Debug a fix?" section